--- a/Surge/Surge.conf
+++ b/Surge/Surge.conf
@@ -35,15 +35,15 @@ keyword-filter = (null)
 🌎𝗢𝘂𝘁𝗯𝗼𝘂𝗻𝗱 = select, 🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴, 🇸🇬𝗦𝗶𝗻𝗴𝗮𝗽𝗼𝗿𝗲, 🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻, 🇹🇼𝗧𝗮𝗶𝘄𝗮𝗻, 🇯🇵𝗝𝗮𝗽𝗮𝗻, 🇲🇴𝗠𝗮𝗰𝗮𝗼
 🎬𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴 = select, 🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴, 🇹🇼𝗧𝗮𝗶𝘄𝗮𝗻, 🇸🇬𝗦𝗶𝗻𝗴𝗮𝗽𝗼𝗿𝗲, 🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻
 📩𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺 = select, 🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴, 🇸🇬𝗦𝗶𝗻𝗴𝗮𝗽𝗼𝗿𝗲
-🎙𝗡𝗲𝘁𝗲𝗮𝘀𝗲𝗠𝘂𝘀𝗶𝗰 = select, policy-path=, update-interval=0
+🎙𝗡𝗲𝘁𝗲𝗮𝘀𝗲𝗠𝘂𝘀𝗶𝗰 = select, 🕛𝗗𝗶𝗿𝗲𝗰𝘁,policy-path=订阅地址, update-interval=0
 🍎𝗔𝗽𝗽𝗹𝗲 = select, 🕛𝗗𝗶𝗿𝗲𝗰𝘁, 🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴, 🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻
 🕹𝗙𝗶𝗻𝗮𝗹 = select, 🕛𝗗𝗶𝗿𝗲𝗰𝘁, 🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴, 🇹🇼𝗧𝗮𝗶𝘄𝗮𝗻, 🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻, 🇯🇵𝗝𝗮𝗽𝗮𝗻, 🇲🇴𝗠𝗮𝗰𝗮𝗼
-🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴 = select, policy-path=, update-interval=0, policy-regex-filter=港|HK|Hong|
-🇸🇬𝗦𝗶𝗻𝗴𝗮𝗽𝗼𝗿𝗲 = select, policy-path=, update-interval=0, policy-regex-filter=新|SG|Singapore|狮城
-🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻 = url-test, url=http://www.gstatic.com/generate_204, policy-path=, update-interval=0, policy-regex-filter=US|美|States|American, timeout=0, interval=0, tolerance=0
-🇹🇼𝗧𝗮𝗶𝘄𝗮𝗻 = select, policy-path=, update-interval=0, policy-regex-filter=台|TW|Taiwan
-🇯🇵𝗝𝗮𝗽𝗮𝗻 = select, policy-path=, update-interval=0, policy-regex-filter=日|JP|Japan
-🇲🇴𝗠𝗮𝗰𝗮𝗼 = select, policy-path=, update-interval=0, policy-regex-filter=^(?!.*?(港|日|台|美|新))
+🇭🇰𝗛𝗼𝗻𝗴 𝗞𝗼𝗻𝗴 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=港|HK|Hong|
+🇸🇬𝗦𝗶𝗻𝗴𝗮𝗽𝗼𝗿𝗲 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=新|SG|Singapore|狮城
+🇺🇸𝗔𝗺𝗲𝗿𝗶𝗰𝗮𝗻 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=US|美|States|American
+🇹🇼𝗧𝗮𝗶𝘄𝗮𝗻 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=台|TW|Taiwan
+🇯🇵𝗝𝗮𝗽𝗮𝗻 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=日|JP|Japan
+🇲🇴𝗠𝗮𝗰𝗮𝗼 = select, policy-path=订阅地址, update-interval=0, policy-regex-filter=^(?!.*?(港|日|台|美|新))
 
 [Rule]
 # Reject
