--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -11,7 +11,7 @@ geo_location_checker=http://ip-api.com/json/?lang=en, https://raw.githubusercont
 
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
-profile_img_url=NyanCAT.png
+profile_img_url=https://raw.githubusercontent.com/zbang6/master/master/QuantumultX/Icon/self.png
 
 ;udp_whitelist=53, 123, 1900, 80-443
 
