--- a/QuantumultX/Filter/Emby.yaml
+++ b/QuantumultX/Filter/Emby.yaml
@@ -3,4 +3,4 @@ payload:
   - DOMAIN-SUFFIX,emby.nexitally.com
   - DOMAIN-SUFFIX,emby.w8ves.co
   - DOMAIN-SUFFIX,emby.plusmedia.site
-  - DOMAIN-SUFFIX,pub3.emby.wtf
+  - DOMAIN-SUFFIX,emby.wtf
