--- a/QuantumultX/Filter/Emby.yaml
+++ b/QuantumultX/Filter/Emby.yaml
@@ -1,6 +1,7 @@
 payload:
-  # > Emby(Nexitally&W8ves)
+  # > Emby
   - DOMAIN-SUFFIX,emby.nexitally.com
   - DOMAIN-SUFFIX,emby.w8ves.co
   - DOMAIN-SUFFIX,emby.plusmedia.site
   - DOMAIN-SUFFIX,emby.wtf
+  - DOMAIN-SUFFIX,emby1.jmsooo.com
