--- a/QuantumultX/Filter/Emby.yaml
+++ b/QuantumultX/Filter/Emby.yaml
@@ -6,4 +6,5 @@ payload:
   - DOMAIN,emby.plusmedia.site
   - DOMAIN,emby.wtf
   - DOMAIN,emby1.jmsooo.com
+  - DOMAIN,cf1.jmsooo.com
   - DOMAIN-KEYWORD,emby
