--- a/Surge/Filter/NBA.yaml
+++ b/Surge/Filter/NBA.yaml
@@ -1,13 +1,21 @@
 payload:
   # NBA
   - DOMAIN-SUFFIX,nba.com
+  - DOMAIN-SUFFIX,opin.media
+  - DOMAIN-SUFFIX,endeavorstreaming.net
+  - DOMAIN-SUFFIX,easelive.# > NBA
+  - DOMAIN-SUFFIX,nba.com
+  - DOMAIN-SUFFIX,opin.media
   - DOMAIN-SUFFIX,endeavorstreaming.net
   - DOMAIN-SUFFIX,easelive.tv
   - DOMAIN-SUFFIX,omtrdc.net
   - DOMAIN-SUFFIX,neulion.com
   - DOMAIN-SUFFIX,akamaized.net
-  - DOMAIN,neulionnbaovod-a.akamaihd.net
-  - DOMAIN,neulion-a.akamaihd.net
-  - DOMAIN,api2.amplitude.com
-  - DOMAIN,dpm.demdex.net
-  - DOMAIN-KEYWORD,nba  
+  - DOMAIN-SUFFIX,akamaihd.net
+  - DOMAIN-SUFFIX,amplitude.com
+  - DOMAIN-SUFFIX,demdex.net
+  - DOMAIN-SUFFIX,akamaistream.net
+  - DOMAIN-SUFFIX,akamai.com
+  - DOMAIN-SUFFIX,akamai.net
+  - DOMAIN-SUFFIX,akamaiedge.net
+  - DOMAIN-KEYWORD,nba
